Task Runner Media Vault Implementation

--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -1,4 +1,4 @@
-<div class="secondary-dialog-curtain mediaVault" ng-show="media_vault_visible == true" ng-controller="lightweightController">
+<div class="tertiary-dialog-curtain mediaVault" ng-show="media_vault_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base card inputs">
         <md-card-title>
             <md-card-title-text>
