--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -19,7 +19,7 @@
         <md-card-content flex>
             <md-content class="md-padding" flex>
                 <div layout="column" layout-align="center center" layout-margin flex>
-                    <div style="width: 100%" layout="row" layout-align="center center" flex>
+                    <div style="width: 100%" layout="row" layout-align="center start" flex>
                         <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex flex-gt-sm="40">
                             <form name="addTask">
                                 <md-card-content>
