--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -40,12 +40,17 @@
                                     </md-button>
                                     <md-menu-content width="4">
                                         <md-menu-item>
+                                            <md-button ng-confirm-message="Are you sure you want to update this task?" ng-confirm-click="updateTask(task)" ng-confirm-condition="true">
+                                            Update Task
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
                                             <md-button>
                                             Run Task
                                             </md-button>
                                         </md-menu-item>
                                         <md-menu-item>
-                                            <md-button>
+                                            <md-button ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(task)" ng-confirm-condition="true">
                                             Delete Task
                                             </md-button>
                                         </md-menu-item>
@@ -60,7 +65,7 @@
                                 <div class="md-list-item-text">
                                     <p style="font-size: 16px;">{{task.title}}</p>
                                 </div>
-                                <md-switch class="md-secondary" ng-model="task.enabled" ng-click="updateTask(task)"></md-switch>
+                                <md-switch class="md-secondary" ng-model="task.enabled"></md-switch>
                                 <md-divider></md-divider>
                             </md-list-item>
                         </md-list>
