--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -28,7 +28,7 @@
                     <md-card-header>
                         <md-card-header-text>
                             <span class="md-title">Tasks</span>
-                            <span class="md-subhead">Enable or Disable</span>
+                            <span class="md-subhead">Manage Tasks</span>
                         </md-card-header-text>
                     </md-card-header>
                     <md-card-content>
