Modify Task View

--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -56,7 +56,7 @@
                                         </md-menu-item>
                                         <md-menu-divider></md-menu-divider>
                                         <md-menu-item>
-                                            <md-button>
+                                            <md-button ng-click="openUpdateTask(task)">
                                             View Task
                                             </md-button>
                                         </md-menu-item>
