--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -68,6 +68,7 @@
         <!-- taskrunner -->
         <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/tasks.html'"></div>
         <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/tasksAddTask.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/tasksDetail.html'"></div>
         <!-- taskrunner -->
 
         <!-- myVault -->
