--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -65,7 +65,7 @@
                                             </md-select>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-list-item ng-show="updateTaskObj.isGeneratedByUser">
+                                    <md-list-item>
                                         <label style="color: rgba(0,0,0,0.38);">Is This Task User Generated</label>
                                         <p class="md-secondary">{{updateTaskObj.isGeneratedByUser ? 'Yes' : 'No'}}</p>
                                     </md-list-item>
