--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -200,10 +200,10 @@
                                             </md-select>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-list-item ng-show="updateTaskObj.isReoccuring">
+                                    <md-list-item ng-show="!updateTaskObj.isGeneratedByUser">
                                         <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
                                             <label>Hour</label>
-                                            <md-select ng-model="updateTaskObj.runTimeHour" ng-required="updateTaskObj.isReoccuring">
+                                            <md-select ng-model="updateTaskObj.runTimeHour" ng-required="!updateTaskObj.isGeneratedByUser">
                                                 <md-option ng-repeat="time in times" ng-value="time">
                                                     {{time}}
                                                 </md-option>
@@ -211,7 +211,7 @@
                                         </md-input-container>
                                         <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
                                             <label>Meridiem</label>
-                                            <md-select ng-model="updateTaskObj.runTimeMeridiem" ng-required="updateTaskObj.isReoccuring">
+                                            <md-select ng-model="updateTaskObj.runTimeMeridiem" ng-required="!updateTaskObj.isGeneratedByUser">
                                                 <md-option><em>None</em></md-option>
                                                 <md-option ng-repeat="meridiem in meridiems" ng-value="meridiem">
                                                     {{meridiem}}
