--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -12,7 +12,7 @@
 
 
             <!-- Action Buttons -->
-            <md-button class="md-fab md-mini" aria-label="Switch between grid and list view" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(task); closeUpdateTask(); clearTaskModel(modifyTaskForm)" ng-confirm-condition="true">
+            <md-button class="md-fab md-mini" aria-label="Switch between grid and list view" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(updateTaskObj); closeUpdateTask(); clearTaskModel(modifyTaskForm)" ng-confirm-condition="true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">delete</md-icon>
             </md-button>
             <!-- Action Buttons -->
