--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -71,6 +71,11 @@
                                             <md-checkbox class="md-secondary" aria-label="Is this task user generated checkbox" ng-model="task.isGeneratedByUser" ng-init="false">
                                             </md-checkbox>
                                         </md-list-item>
+                                        <md-list-item>
+                                            <label style="color: rgba(0,0,0,0.38);">Is This Task Manually Triggered</label>
+                                            <md-checkbox class="md-secondary" aria-label="Is this task manually triggered checkbox" ng-model="task.isManuallyTriggered" ng-init="false">
+                                            </md-checkbox>
+                                        </md-list-item>
                                         <md-list-item ng-show="task.isGeneratedByUser">
                                             <md-input-container class="md-block lightweight-md-input" flex>
                                                 <label>App Activity Trigger</label>
@@ -131,10 +136,10 @@
                                                     </div>
                                                 </md-input-container>
                                             </md-list-item>                                   
-                                            <md-list-item ng-show="!task.isGeneratedByUser">
+                                            <md-list-item ng-show="!task.isGeneratedByUser && !task.isManuallyTriggered">
                                                 <md-input-container class="md-block lightweight-md-input" flex>
                                                     <label>Is This Reoccuring Task?</label>
-                                                    <md-select ng-model="task.isReoccuring" ng-required="task.channels != 'In App Dialog' && !task.isGeneratedByUser">
+                                                    <md-select ng-model="task.isReoccuring" ng-required="task.channels != 'In App Dialog' && !task.isGeneratedByUser && !task.isManuallyTriggered">
                                                         <md-option><em>None</em></md-option>
                                                         <md-option ng-value="true">
                                                             Yes
@@ -145,8 +150,8 @@
                                                     </md-select>
                                                 </md-input-container>
                                             </md-list-item>
-                                            <md-list-item ng-show="!task.isReoccuring && !task.isGeneratedByUser">
-                                                <md-input-container class="md-block lightweight-md-input" flex ng-required="task.channels != 'In App Dialog' && !task.isReoccuring">
+                                            <md-list-item ng-show="!task.isReoccuring && !task.isGeneratedByUser && !task.isManuallyTriggered">
+                                                <md-input-container class="md-block lightweight-md-input" flex ng-required="task.channels != 'In App Dialog' && !task.isReoccuring && !task.isManuallyTriggered">
                                                     <label>Specify A Run Date For The Task</label>
                                                     <md-datepicker flex style="width: 100%;" ng-model="task.runDate" md-placeholder="No Date Chosen"></md-datepicker>
                                                 </md-input-container>
@@ -174,7 +179,7 @@
                                                     </md-select>
                                                 </md-input-container>
                                             </md-list-item>
-                                            <md-list-item ng-show="task.isReoccuring && !task.isGeneratedByUser">
+                                            <md-list-item ng-show="task.isReoccuring && !task.isGeneratedByUser && !task.isManuallyTriggered">
                                                 <md-input-container class="md-block lightweight-md-input" flex>
                                                     <label>Choose Which Day To Run The Task</label>
                                                     <md-select ng-model="task.runDay" ng-required="task.isReoccuring">
@@ -203,10 +208,10 @@
                                                     </md-select>
                                                 </md-input-container>
                                             </md-list-item>
-                                            <md-list-item ng-show="!task.isGeneratedByUser">
+                                            <md-list-item ng-show="!task.isGeneratedByUser && !task.isManuallyTriggered">
                                                 <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
                                                     <label>Hour</label>
-                                                    <md-select ng-model="task.runTimeHour" ng-required="!task.isGeneratedByUse">
+                                                    <md-select ng-model="task.runTimeHour" ng-required="!task.isGeneratedByUser && !task.isManuallyTriggered">
                                                         <md-option ng-repeat="time in times" ng-value="time">
                                                             {{time}}
                                                         </md-option>
@@ -214,7 +219,7 @@
                                                 </md-input-container>
                                                 <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
                                                     <label>Meridiem</label>
-                                                    <md-select ng-model="task.runTimeMeridiem" ng-required="!task.isGeneratedByUse">
+                                                    <md-select ng-model="task.runTimeMeridiem" ng-required="!task.isGeneratedByUser && !task.isManuallyTriggered">
                                                         <md-option><em>None</em></md-option>
                                                         <md-option ng-repeat="meridiem in meridiems" ng-value="meridiem">
                                                             {{meridiem}}
